# visitor-pattern-ast-traversal-real-use

./: .gitignore  README.md  pyproject.toml
src/visitor_ast/: __init__.py  evaluator.py  nodes.py  optimizer.py  pretty_printer.py  type_checker.py  visitor.py
tests/: test_evaluator.py  test_nodes.py  test_optimizer.py  test_pretty_printer.py  test_type_checker.py  test_visitor_dispatch.py
